--- a/app/views/layouts/main_layout.slim
+++ b/app/views/layouts/main_layout.slim
@@ -3,17 +3,24 @@ html lang='en'
   head
     meta content='text/html; charset=utf-8' http-equiv='Content-Type'
     meta name='viewport' content='width=device-width,initial-scale=1'
+    = csrf_meta_tags
     title = @title.present? ? "#{@title} | Status Collector" : "Status Collector"
     = favicon_tag 'favicon.ico'
     = stylesheet_link_tag '/bootstrap/css/bootstrap.min', 'application'
 
 
   body
+    script type='text/template' id='report-post-tmpl'
+      p <%= content %>
+
     div class='navbar navbar-fixed-top'
       div class='navbar-inner'
         div class='container'
           p = yield
-          p foo bar
+          
+          h2 Status Report
+
+          div id='status-report'
 
     =javascript_include_tag 'jquery.min', 'underscore-min', 'backbone-min', '/bootstrap/js/bootstrap.min', 'models', 'collections', 'views'
 
